--- a/src/XmlDocExtractionLib/XmlDocExtractionLib/XmlDocExtractionLib.csproj
+++ b/src/XmlDocExtractionLib/XmlDocExtractionLib/XmlDocExtractionLib.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
